--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"tsc": "tsc",
+		"build": "tsc",
+		"start": "node build/index.js",
 		"dev": "ts-node-dev ./index.ts"
 	},
 	"keywords": [],
